  only 'True' and 'False' strings must be used (previous versions of
  bzr will interpret all strings differing from 'True'
  (case-sensitive) as false.
  (Brian de Alwis, Vincent Ladeuil)

* ``Config.get_user_option_as_bool`` will now warn if a value cannot
  be interpreted as a boolean.
  (Vincent Ladeuil)

Documentation
*************

API Changes
***********

* Added ``bzrlib.merge.PerFileMerger``, a more convenient way to write
  some kinds of ``merge_file_content`` hook functions.
  (Andrew Bennetts)
  
* `BzrDir`, `Branch`, `Repository` and `WorkingTree` now all support `user_url`,
  `user_transport`, `control_url` and `control_transport` members pointing
  respectively to the directory containing the ``.bzr`` control directory, 
  and to the directory within ``.bzr`` used for the particular component.
  All of them inherit from `ControlComponent` which provides default
  implementations.
  (Martin Pool)

Internals
*********

* Permit bzr to run under ``python -OO`` which reduces the size of bytecode
  files loaded from disk. To ensure docstrings needed for help are never
  stripped, the prefix ``__doc__ =`` should now be used.
  (Martin <gzlist@googlemail.com>)

Testing
*******

* ``bzr selftest --parallel=subprocess`` now works correctly on win32.
   (Gordon Tyler, #551332)

* Workaround ``Crypto.Random`` check leading to spurious test
  failures on Lucid, FreeBSD and gentoo.  
  (Vincent Ladeuil, #528436)

bzr 2.2b2
#########

:2.2b2: 2010-04-16

This is a somewhat early second beta of the 2.2 series, to fix a python2.4
incompatibility in the 2.2b1 release.  It also includes a swag of
performance, usability and correctness improvements: test feedback on all
of these would be welcome.


New Features
************

* ``bzr diff`` now supports a --format option, which can be used to 
  select alternative diff formats. (Jelmer Vernooij, #555994)

Bug Fixes
*********

* ``bzr dpush``, ``bzr push`` and ``bzr send`` will now issue a warning